# fund_agent

./: .env  .env.example  .gitignore  ACCEPTANCE_REPORT_AAPL_GOOGL.md  ACCEPTANCE_REPORT_META_AMD.md  ACCEPTANCE_REPORT_TIER2.md  CHANGELOG_TIER2_IR.md  CLAUDE.md  CLS_FILTER_OPTIMIZATION_SUMMARY.md  CLS_INTEGRATION_COMPLETE.md  CLS_NEWS_RULES_FIXES_BATCH2.md  CLS_NEWS_RULES_FIXES_SUMMARY.md  CLS_PIPELINE_INTEGRATION_PATCH.py  CNINFO_ANNOUNCEMENT_PIPELINE_COMPLETE.md  CNINFO_STAGE2_COMPLETE.md  COMPANY_IR_COMPLETE.md  COMPANY_IR_FINAL_COMPLETE.md  COMPANY_IR_IMPLEMENTATION_STATUS.md  COMPANY_IR_RSS_FIX_PLAN.md  COMPANY_IR_TIER_EXPANSION_COMPLETE.md  DAEMON_COMPLETE.md  DAEMON_IMPLEMENTATION_PROGRESS.md  FINAL_COMPLETE_SUMMARY.md  FINAL_SESSION_SUMMARY.md  MULTI_SOURCE_PIPELINE_UPGRADE.md  Makefile  PDF_INTEGRATION_COMPLETE.md  PDF_PROCESSING_FIX.txt  QUICKSTART.md  README.md  SEC_CONTENT_REDUCER_COMPLETE.md  SEC_EDGAR_ARCHITECTURE.md  STAGE2A_PROGRESS.md  TITLE_COMPANY_EXTRACTOR_IMPLEMENTATION.md  TITLE_COMPANY_FINAL_STATUS.md  TITLE_COMPANY_PROGRESS.md  WALLSTREETCN_INTEGRATION_SUMMARY.md  cls_news_all_20260617.jsonl  docker-compose.yml  nohup.out  (+2 more)
configs/: etf_index_mapping.yaml
docs/: architecture.md  architecture_factors.md  clickhouse_quickstart.md  collect_daily_bars_guide.md  data_collection_issues.md  news_ai_event_extraction.md  phase1_refactor_summary.md  phase2_symbols_collection_summary.md  theme_etf_mapping_summary.md  tushare_setup.md
scripts/: build_theme_etf_pool.py  calculate_theme_factors.py  collect_cls_to_db.py  collect_company_ir.py  collect_news.py  (+25 more)
(+1077 files in other folders)
