[project]
name = "fund-quant-system"
version = "0.1.0"
description = "机构级量化交易系统"
authors = [{name = "Quant Team"}]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "polars>=0.20.0",
    "numpy>=1.24.0",
    "tushare>=1.4.0",
    "akshare>=1.14.0",
    "clickhouse-driver>=0.2.6",
    "redis>=5.0.0",
    "pyarrow>=14.0.0",
    "fastparquet>=2024.2.0",
    "requests>=2.31.0",
    "feedparser>=6.0.10",
    "beautifulsoup4>=4.12.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "plotly>=5.18.0",
    "streamlit>=1.29.0",
    "fastapi>=0.108.0",
    "uvicorn>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "tenacity>=8.2.3",
    "joblib>=1.3.2",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.7.0",
    "ipython>=8.18.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
